# jmlc-project

./: .gitignore  .gitlab-ci-k8s-template.yml  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml  run_api.py  run_worker.py
assets/: UCUM_codes.json  UCUM_codes_nsi.json  biomaterial_designations.xlsx  biomaterials.json  budzdorov_normalizer_data.json  labname_designations.xlsx  labnames.json  laboratory_designations.xlsx  nomenclature.json  normalizer_data.json  result_designations.xlsx  results.json  specimen_container_catalog_mapping.json  translation_glossary.json
deployment/: init-default-namespace.sh  init-temporal-schema.sh
deployment/settings/: 00-default.yaml
experiments/: phr_pipeline_pandas.ipynb
http_requests/: catalog_assistant.http  checkup_assistant.http  general_assistant.http  prescription_recognizer.http  recommendation_editor.http  recommendation_enricher.http  suggested_replies.http  test_callback_receiver.py
prompts/: checkup_assistant.yml  checkup_assistant_los_client.yml  loinc_search_variants.yml  mcp_enrichment.yml  prescription_normalization.yml  prescription_recognition.yml  recognition_normalization.yml  report_interpretation.yml  report_recognition.yml  translation.yml
src/: config.py  constants.py  utils.py
src/activities/: __init__.py  _clients.py  callbacks.py  catalog_assistant.py  checkup_assistant.py  general_assistant.py  interpretation_recommendations_activities.py  llm_activities.py  mcp.py  prescription_recognizer.py  recognition_data_processing.py  recommendation_editor.py  (+4 more)
(+108 files in other folders)
