[project]
name = "agents-workflow"
version = "0.1.0"
description = "Temporal-based workflow orchestration for medical assistant agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all]>=0.136.0",
    "openai>=2.32.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "pytz>=2024.1",
    "httpx>=0.24.0",
    "aiohttp>=3.13.5",
    "fhir-resources>=8.2.0",
    "hypercorn>=0.18.0",
    "pyyaml>=6.0.3",
    "temporalio>=1.27.2",
    "pydantic-settings>=2.14.1",
    "python-json-logger>=4.1.0",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=8.0.0",
    "python-dateutil>=2.9.0.post0",
    "py-consul>=1.7.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
